--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     background-color: black;
     font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
+    margin-left: 10px;
 }
 
 img {
